# proyectoBateadora

./: CMakeLists.txt  Nuevo Documento de texto.txt  README.md  diseño_del_proyecto.txt  sdkconfig  sdkconfig.old
components/comunicacionSerial/: CMakeLists.txt  comunicacionSerial.c
components/comunicacionWiFi/: CMakeLists.txt  ESP32_1.crt  ESP32_1.key  components.mk  comunicacionWiFi.c
components/comunicacionWiFi/include/: comunicacionWiFi.h
components/grupoBateo/: CMakeLists.txt  grupoBateo.c
components/grupoMedicion/: CMakeLists.txt  grupoMedicion.c
components/moduloRele/: CMakeLists.txt  moduloRele.c
main/: CMakeLists.txt  main.c
pcb/: Sistema_deAdquisicion_de_datos.EDF  Sistema_deAdquisicion_de_datos.pdsprj  Sistema_deAdquisicion_de_datos.pdsprj.ALEJANDRO.aleja.workspace  Sistema_deAdquisicion_de_datos.sts  bestsave.rte  proyectoBateadora.pdsprj  proyectoBateadora.pdsprj.ALEJANDRO.aleja.workspace
pcb/Project Backups/: Sistema_deAdquisicion_de_datos [20240616, 19-36-53].pdsprj  Sistema_deAdquisicion_de_datos [20240616, 19-37-06].pdsprj  Sistema_deAdquisicion_de_datos [20240622, 18-40-15].pdsprj  Sistema_deAdquisicion_de_datos [20240622, 20-07-47].pdsprj  Sistema_deAdquisicion_de_datos [20240703, 20-38-47].pdsprj  Sistema_deAdquisicion_de_datos [20240703, 20-51-38].pdsprj  Sistema_deAdquisicion_de_datos [Autosaved].pdsprj  Sistema_deAdquisicion_de_datos2 [20240615, 22-24-26].pdsprj  Sistema_deAdquisicion_de_datos2 [20240615, 22-31-40].pdsprj  Sistema_deAdquisicion_de_datos2 [Autosaved].pdsprj  Sistema_deAdquisicion_de_datos3 [20240701, 15-02-17].pdsprj  (+5 more)
(+37 files in other folders)
